tests/baselines/reference/contextualClassMethodParameter18.errors.txt
tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter18.ts(6,5): error TS2416: Property 'method' in type 'Derived' is not assignable to the same property in base type 'Base'.
  Type '(x: number, y: string, z: any) => void' is not assignable to type '(x: number, y: string) => void'.


==== tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter18.ts (1 errors) ====
    class Base {
        method(x: number, y: string) { }
    }
    
    class Derived extends Base {
        method(x, y, z) { }
        ~~~~~~
!!! error TS2416: Property 'method' in type 'Derived' is not assignable to the same property in base type 'Base'.
!!! error TS2416:   Type '(x: number, y: string, z: any) => void' is not assignable to type '(x: number, y: string) => void'.
    }
    